Fix main-navigation spacing between header and content

--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -73,7 +73,7 @@ a {
 	justify-content: flex-start;
 	align-items: center;
 	width: 90%;
-	padding-top: 0.8rem;
+	padding: 0.8rem 0;
 	margin: 0 auto;
 	position: relative;
 	@include tablet {
